test/libsolidity/syntaxTests/abstract/library.sol
abstract library A { }
// ----
// TypeError 9571: (0-22): Libraries cannot be abstract.
